--- a/src/main/yaml/isolation_test.yml
+++ b/src/main/yaml/isolation_test.yml
@@ -69,16 +69,11 @@ variables:
   gAlgorithm: &gAlgorithm
     type: ArbitraryVariable
     parameters: [2, [0, 1, 2]] # 0=ABF, 1=FLEX, 2=BIS
-  usePacketLosser: &usePacketLosser
-    type: ArbitraryVariable
-    parameters: [0, [1]] # default (no loss), otherwise if the var is let to vary (loss)
   packetLossR55: &packetLossR55
-    min: 0.8
-    max: 0.96
-    step: 0.05
-    default: 0.95
+    type: ArbitraryVariable
+    parameters: [0.9, [0.8, 0.85, 0.9, 0.95]] # 0=ABF, 1=FLEX, 2=BIS
   packetLossR99: &packetLossR99
-    formula: radius
+    formula: radius * 0.99
     
 export:
  - time
@@ -171,8 +166,8 @@ network-model:
 pools:
   - pool: &program
     - time-distribution:
-        type: WeibullDistributedWeibullTime
-        parameters: [*rate, *dtime, *dtime]
+        type: MoleculeControlledTimeDistribution
+        parameters: ["rate", null, "Exponential", 0.1]
       type: Event
       actions:
         - type: RunProtelisProgram
@@ -207,13 +202,9 @@ pools:
       concentration: *num
     - molecule: gAlgorithm
       concentration: *gAlgorithm
-    - molecule: usePacketLosser
-      concentration: *usePacketLosser
-    - molecule: packetLossR55
-      concentration: *packetLossR55
-    - molecule: packetLossR99
-      concentration: *packetLossR99
- 
+    - molecule: rate
+      concentration: 1
+
 displacements:
   - in:                                         # source 1
       type: Point
