--- a/versions.properties
+++ b/versions.properties
@@ -10,3 +10,11 @@ version.it.unibo.alchemist=10.0.0-dev0w+79721be0b
 version.kotlin=1.4.21
 
 version.protelis=14.1.5
+
+version.org.danilopianini..jirf=0.3.0
+
+version.org.jgrapht..jgrapht=1.5.0
+
+version.org.jgrapht..jgrapht-core=1.5.0
+
+version.org.apache.commons..commons-lang3=3.11
