--- a/src/main/yaml/casestudy.yml
+++ b/src/main/yaml/casestudy.yml
@@ -4,6 +4,10 @@
 
 incarnation: protelis
 
+environment:
+  type: OSMEnvironment
+  parameters: ["torino.pbf", false]
+
 variables:
   random: &random
     min: 0
@@ -40,17 +44,11 @@ variables:
   vibr: &vibr
     formula: speed / 6
   radius: &radius           # connection radius
-    formula: 100
+    formula: 80
   area: &area               # radius of circular overall area
     formula: hops * 50
-  narea: &narea
-    formula: -area
   num: &num                 # total number of devices
     formula: neigh * hops * hops / 4
-  border: &border           # number of devices on the border to ensures network connection (disabled)
-    formula: hops * 4
-  middle: &middle           # number of devices in the middle 
-    formula: num - 2
   dtime: &dtime
     type: ArbitraryVariable
     parameters: [0.1, [0.01, 0.03, 0.05, 0.08, 0.1, 0.15, 0.2, 0.25, 0.3]]
@@ -71,91 +69,14 @@ variables:
     parameters: [2, [0, 1, 2]] # 0=ABF, 1=FLEX, 2=BIS
   packetLoss50_99Ratio:
     type: ArbitraryVariable
-    parameters: [0.9, [0.8, 0.85, 0.9, 0.95]] # 0=ABF, 1=FLEX, 2=BIS
+    parameters: [0.9, [0.8, 0.85, 0.9, 0.95]]
   packetLossR55: &packetLossR50
     formula: packetLossR99 * packetLoss50_99Ratio
   packetLossR99: &packetLossR99
     formula: radius * 0.99
-    
+
 export:
  - time
- - molecule: idemp-g-dist_err
-   aggregators: [mean]
-   value-filter: onlyfinite
- - molecule: arith-g-dist_err
-   aggregators: [mean]
-   value-filter: onlyfinite
-
- - molecule: idemp-g-dist_inf
-   aggregators: [mean]
- - molecule: arith-g-dist_inf
-   aggregators: [mean]
-
- - molecule: ideal-min
-   aggregators: [min]
- - molecule: sp-min
-   aggregators: [min]
- - molecule: mp-min
-   aggregators: [min]
- - molecule: wmp-min
-   aggregators: [min]
- - molecule: list-min
-   aggregators: [min]
- - molecule: list-avg-min
-   aggregators: [min]
-
- - molecule: sp-min_err
-   aggregators: [min]
- - molecule: mp-min_err
-   aggregators: [min]
- - molecule: wmp-min_err
-   aggregators: [min]
- - molecule: list-min_err
-   aggregators: [min]
- - molecule: list-avg-min_err
-   aggregators: [min]
-
- - molecule: ideal-sum
-   aggregators: [sum]
- - molecule: sp-sum
-   aggregators: [sum]
- - molecule: mp-sum
-   aggregators: [sum]
- - molecule: wmp-sum
-   aggregators: [sum]
- - molecule: list-sum
-   aggregators: [sum]
- - molecule: listf-sum
-   aggregators: [sum]
-   
- - molecule: list_avg_sp-sum
-   aggregators: [sum]
- - molecule: listf_avg_sp-sum
-   aggregators: [sum]
- - molecule: list_avg_mp-sum
-   aggregators: [sum]
- - molecule: listf_avg_mp-sum
-   aggregators: [sum]
-
- - molecule: sp-sum_err
-   aggregators: [sum]
- - molecule: mp-sum_err
-   aggregators: [sum]
- - molecule: wmp-sum_err
-   aggregators: [sum]
- - molecule: list-sum_err
-   aggregators: [sum]
- - molecule: listf-sum_err
-   aggregators: [sum]
-
- - molecule: list_avg_sp-sum_err
-   aggregators: [sum]
- - molecule: listf_avg_sp-sum_err
-   aggregators: [sum]
- - molecule: list_avg_mp-sum_err
-   aggregators: [sum]
- - molecule: listf_avg_mp-sum_err
-   aggregators: [sum]
 
 seeds:
   scenario: *random
@@ -169,11 +90,11 @@ pools:
   - pool: &program
     - time-distribution:
         type: MoleculeControlledTimeDistribution
-        parameters: ["rate", null, "Exponential", 0.1]
+        parameters: ["step", null, "Exponential", 0.1]
       type: Event
       actions:
         - type: RunProtelisProgram
-          parameters: [isolation_test, *pretain, "PacketLoss", [*packetLossR50, *packetLossR99]]
+          parameters: [casestudy, *pretain, "PacketLoss", [*packetLossR50, *packetLossR99]]
     - program: send
   - pool: &vibrate
     - time-distribution:
@@ -190,42 +111,14 @@ pools:
         - type: MoveToTarget
           parameters: [target, *speed]
   - pool: &deviceContent
-    - molecule: dspace
-      concentration: *dspace
-    - molecule: dtime
-      concentration: *dtime
-    - molecule: speed
-      concentration: *speed
-    - molecule: rate
-      concentration: *rate
-    - molecule: radius
-      concentration: *radius
-    - molecule: area
-      concentration: *area
-    - molecule: num
-      concentration: *num
-    - molecule: gAlgorithm
-      concentration: *gAlgorithm
-    - molecule: rate
+    - molecule: step
       concentration: 1
 
 displacements:
-  - in:                                         # source 1
-      type: Point
-      parameters: [*narea, 0]
-    programs:
-      - *program
-    contents: *deviceContent
-  - in:                                         # source 2
-      type: Point
-      parameters: [*area,  0]
-    programs:
-      - *program
-    contents: *deviceContent
   - in:                                         # devices
       type: Circle
-      parameters: [*middle, 0, 0, *area]
-    programs: 
+      parameters: [100, 45.05765661125909, 7.688277660240386, 0.001]
+    programs:
       - *program
-      - *move
+#      - *move
     contents: *deviceContent
