--- a/versions.properties
+++ b/versions.properties
@@ -20,3 +20,5 @@ version.org.jgrapht..jgrapht-core=1.5.0
 version.org.apache.commons..commons-lang3=3.11
 
 version.org.locationtech.jts..jts=1.18.0
+
+version.org.locationtech.jts..jts-core=1.18.0
