--- a/src/main/yaml/casestudy.yml
+++ b/src/main/yaml/casestudy.yml
@@ -26,7 +26,7 @@ valentino: &valentino
   ]
 
 variables:
-  random: &random
+  seed: &random
     min: 0
     max: 9
     step: 1
@@ -39,6 +39,11 @@ variables:
   retain: &retain
     type: ArbitraryVariable
     parameters: [3, [3]]
+  people: &people
+    min: 300
+    max: 1000
+    step: 100
+    default: 500
   packetLoss50_99Ratio:
     type: ArbitraryVariable
     parameters: [0.9, [0.8, 0.85, 0.9, 0.95]]
@@ -51,6 +56,37 @@ variables:
 
 export:
  - time
+ - type: Oracle
+ - molecule: errorcount
+   aggregators: [mean, standarddeviation]
+   value-filter: onlyfinite
+ - molecule: errorcountClassic
+   aggregators: [mean, standarddeviation]
+   value-filter: onlyfinite
+ - molecule: errorbarycenter
+   aggregators: [mean, standarddeviation]
+   value-filter: onlyfinite
+ - molecule: errorbarycenterClassic
+   aggregators: [mean, standarddeviation]
+   value-filter: onlyfinite
+ - molecule: errormaxDistance
+   aggregators: [mean, standarddeviation]
+   value-filter: onlyfinite
+ - molecule: errormaxDistanceClassic
+   aggregators: [mean, standarddeviation]
+   value-filter: onlyfinite
+ - molecule: warning
+   aggregators: [sum, mean]
+   value-filter: onlyfinite
+ - molecule: warningClassic
+   aggregators: [sum, mean]
+   value-filter: onlyfinite
+ - molecule: danger
+   aggregators: [sum, mean]
+   value-filter: onlyfinite
+ - molecule: dangerClassic
+   aggregators: [sum, mean]
+   value-filter: onlyfinite
 
 seeds:
   scenario: *random
@@ -119,3 +155,7 @@ displacements:
       - *program
       - *move
     contents: *deviceContent
+
+terminate:
+  - type: AfterTime
+    parameters: [1000]
